--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is an exercise in the use of express to query a MySQL database.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,8 @@
   },
   "homepage": "https://github.com/DevArrowsmith/music-library#readme",
   "devDependencies": {
-    "eslint": "^7.29.0"
+    "eslint": "^7.29.0",
+    "nodemon": "^2.0.9"
   },
   "dependencies": {
     "express": "^4.17.1"
