--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon -r dotenv/config index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/DevArrowsmith/music-library#readme",
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "eslint": "^7.29.0",
     "nodemon": "^2.0.9"
   },
