--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "homepage": "https://github.com/DevArrowsmith/music-library#readme",
   "devDependencies": {
+    "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "eslint": "^7.29.0",
-    "nodemon": "^2.0.9"
+    "mocha": "^9.0.2",
+    "nodemon": "^2.0.9",
+    "supertest": "^6.1.3"
   },
   "dependencies": {
     "express": "^4.17.1",
